--- a/app/Resources/views/employee/index.html.twig
+++ b/app/Resources/views/employee/index.html.twig
@@ -17,7 +17,7 @@
             <th>County</th>
             <th>Landline Telephone</th>
             <th>Mobile Telephone</th>
-            <th>Aactive</th>
+            <th>Active</th>
             <th>Managing Office</th>
             <th>Startdate</th>
             <th>Finishdate</th>
