--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -4,7 +4,9 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1> You must be logged in to use that area of the site!</h1>
+                <img src="/images/iwalogo2017.png" alt="IWA logo"></a>
+                <h3>That context is not publicly available</h3>
+                <h3>Please login to the application</h3>
 
 
                 {% if error %}
