--- a/app/Resources/views/serviceuser/show.html.twig
+++ b/app/Resources/views/serviceuser/show.html.twig
@@ -2,9 +2,7 @@
 
 {% block body %}
     <div class="column_container">
-        <div class="container">
-            <section class="flexnarrow">
-                <section class="navbar-left">
+        <section>
             <h4>Service User Details</h4>
 
             <table>
@@ -122,11 +120,8 @@
 
             </table>
         </section>
-
             </section>
-        </div>
 
-        <section class="flex">
             <section>
                 <h4>Rosters for this Service User</h4>
                 <a href="{{ path('roster_new_su', { 'serviceUser': serviceUser.id }) }}" class="btn btn-success btn"
@@ -411,18 +406,15 @@
                     </tbody>
                 </table>
 
-            </section>
-
 
         </section>
-        <section class="flex">
-            <section>
+        <section class="fixed">
                 <p>
                     <iframe
-                            width="330"
+                            width="270"
                             height="425"
                             frameborder="0" style="border:1px"
-                            src="http://maps.google.com/maps?q={{ serviceUser.latitude }},{{ serviceUser.longtitude }}&zoom=15&output=embed"></iframe>
+                            src="http://maps.google.com/maps?q={{ serviceUser.latitude }},{{ serviceUser.longtitude }}&z=13&output=embed"></iframe>
                 </p>
                 <table>
                     <th>Latitude</th>
@@ -436,7 +428,5 @@
 
 
             </section>
-        </section>
-    </div>
     </div>
 {% endblock %}
