--- a/src/Bundle/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/Bundle/AppBundle/Resources/views/Default/index.html.twig
@@ -1,69 +1,81 @@
-{% block pageTitle %}home page{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8"/>
 
-{% block body %}
+    <title>Scheduler - {% block pageTitle %}{% endblock %}</title>
+    <style>
+        @import '/css/flash.css';
+        @import '/css/style.css';
+        @import '/css/aside.css';
+        @import "/css/nav.css";
+        @import "/css/layout.css";
 
-    <h1> Welcome to the Scheduler App
-    </h1>
-    <ul>
-        <hr>
-        <li>
-            <a href="{{ path('roster_index') }}">
+        {% block stylesheets %}
+        label {
+            display: inline-flex;
+            float: left;
+            width: 3rem;
+            padding-right: 0.5rem;
+            font-weight: bold;
+            color: blue;
+            text-align: right;
+        }
 
-                <img src="/images/time.png" alt="Clock" height="32" width="32"></a>
-            <a href="{{ path('roster_index') }}" class="btn btn-danger" role="button">Rosters</a>
-        </li>
-        <li>
+        .form-field {
+            padding-bottom: 1rem;
+        }
+    </style>
+    {% endblock %}
+    {% block body %}
+        <img src="/images/iwalogo2017.png" alt="IWA logo"></a>
+        <div class="column_container">
+            <section class="flex">
 
-            <a href="{{ path('serviceuser_index') }}">
+                <h1> Welcome to the IWA Assisted Living Scheduler App</h1>
 
-                <img src="/images/serviceuser.png" alt="service user" height="32" width="32"></a>
+            </section>
+        </div>
 
+        <img src="/images/carericon.jpg" alt="carer icon" height="250" width="250"></a>
 
-            <a href="{{ path('serviceuser_index') }}" class="btn btn-primary" role="button">Service Users</a>
-        </li>
-        <li>
-
-            <a href="{{ path('roster_index') }}">
-
-                <img src="/images/employee.png" alt="Employee" height="32" width="32"></a>
-
-
-            <a href="{{ path('employee_index') }}" class="btn btn-warning" role="button">Employees</a>
-        </li>
-        <li>
-
+        <ul>
+            <li>
             <a href="{{ path('office_index') }}">
 
-                <img src="/images/department.png" alt="Office" height="32" width="32"></a>
-            <a href="{{ path('office_index') }}" class="btn btn-success" role="button">Offices</a>
-        </li>
+                <img src="/images/department.png" alt="Office" height="48" width="48"></a>
+                <a href="{{ path('office_index') }}" class="btn btn-success" role="button">Get Started</a>
+            </li>
+            {#
+                        <a href="{{ path('security_login') }}">
+
+                            <img src="/images/login.png" alt="customer" height="48" width="48"></a>
+
+                        <a href="{{ path('security_login') }}" class="btn btn-info" role="button">Login</a>
+            #}
         <li>
 
-            <a href="{{ path('customer_index') }}">
+            <a href="https://irishwheelchairassociation.samanage.com">
 
-                <img src="/images/customer.png" alt="customer" height="32" width="32"></a>
+                <img src="/images/help.png" alt="help" height="48" width="48"></a>
 
-            <a href="{{ path('customer_index') }}" class="btn btn-info" role="button">Customers</a>
+            <a href="https://irishwheelchairassociation.samanage.com/" class="btn btn-default" role="button">Get Help
+                from IWA ICT Support</a>
         </li>
-        <li>
-
-            <a href="{{ path('security_login') }}">
-
-                <img src="/images/login.png" alt="customer" height="32" width="32"></a>
-
-            <a href="{{ path('security_login') }}" class="btn btn-info" role="button">Login</a>
-        </li>
-        <li>
-
-            <a href="{{ path('security_logout') }}">
-
-                <img src="/images/logout.png" alt="customer" height="32" width="32"></a>
-
-            <a href="{{ path('security_logout') }}" class="btn btn-info" role="button">Logout</a>
-        </li>
-
     </ul>
+        </section>
 
+        </section>
+        </section>
+        </div>
 
+        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+            <a href="{{ path('security_logout') }}">
+                <a class="btn btn-default btn"> You are currently logged in as {{ app.user }}</a>
+                <img src="/images/logout.png" alt="customer" height="32" width="32"></a>
+            <a href="{{ path('security_logout') }}" class="btn btn-primary" role="button">Logout</a>
+        {% endif %}
 {% endblock %}
 
+</head>
+</html>
