--- a/app/Resources/views/office/edit.html.twig
+++ b/app/Resources/views/office/edit.html.twig
@@ -4,7 +4,7 @@
     <h1>Office edit</h1>
     {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
-    <input type="submit" value="Submit Changes" class="btn btn-success btn-sm" role="button"/>
+    <input type="submit" value="Submit Changes"/>
     {{ form_end(edit_form) }}
 
     <ul>
