--- a/app/Resources/views/serviceuser/edit.html.twig
+++ b/app/Resources/views/serviceuser/edit.html.twig
@@ -9,16 +9,16 @@
 
             {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
-    <input type="submit" class="btn btn-success btn-sm" role="button" value="Submit Changes"/>
+            <input type="submit" value="Submit Changes"/>
     {{ form_end(edit_form) }}
     <ul>
         <li>
-            <a href="{{ path('serviceuser_index') }}" class="btn btn-success btn-sm" role="button">Back to the Service
+            <a href="{{ path('serviceuser_index') }}" role="button">Back to the Service
                 Users list</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input type="submit" value="Delete" class="btn btn-success btn-sm" role="button">
+            <input type="submit" value="Delete">
             {{ form_end(delete_form) }}
         </li>
     </ul>
