--- a/app/Resources/views/customer/edit.html.twig
+++ b/app/Resources/views/customer/edit.html.twig
@@ -18,11 +18,11 @@
 
     <ul>
         <li>
-            <a href="{{ path('customer_index') }}" class="btn btn-success btn-sm" role="button">Back to the list</a>
+            <a href="{{ path('customer_index') }}">Back to the list</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input type="submit" value="Delete" class="btn btn-success btn-sm" role="button">
+            <input type="submit" value="Delete">
             {{ form_end(delete_form) }}
         </li>
     </ul>
