--- a/app/Resources/views/customer/index.html.twig
+++ b/app/Resources/views/customer/index.html.twig
@@ -26,12 +26,10 @@
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('customer_show', { 'id': customer.id }) }}" class="btn btn-success btn-sm"
-                               role="button">View</a>
+                            <a href="{{ path('customer_show', { 'id': customer.id }) }}">View</a>
                         </li>
                         <li>
-                            <a href="{{ path('customer_edit', { 'id': customer.id }) }}" class="btn btn-success btn-sm"
-                               role="button">Edit</a>
+                            <a href="{{ path('customer_edit', { 'id': customer.id }) }}">Edit</a>
                         </li>
                     </ul>
                 </td>
@@ -54,7 +52,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('customer_new') }}" class="btn btn-success btn-sm" role="button">Create a new customer</a>
+            <a href="{{ path('customer_new') }}">Create a new customer</a>
         </li>
     </ul>
 {% endblock %}
