--- a/app/Resources/views/customer/show.html.twig
+++ b/app/Resources/views/customer/show.html.twig
@@ -55,12 +55,11 @@
 
     <ul>
         <li>
-            <a href="{{ path('customer_index') }}" class="btn btn-success btn-sm" role="button">Back to the Customer
+            <a href="{{ path('customer_index') }}">Back to the Customer
                 list</a>
         </li>
         <li>
-            <a href="{{ path('customer_edit', { 'id': customer.id }) }}" class="btn btn-success btn-sm" role="button">Edit
-                This Record</a>
+            <a href="{{ path('customer_edit', { 'id': customer.id }) }}">Edit This Record</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
